tests/ui/parser/attr-bad-meta-2.rs
#[path =] //~ ERROR expected expression, found `]`
mod m {}

// ferrocene-annotations: fls_gvwd0kf72jt
// Attributes
